[gd_scene load_steps=10 format=3 uid="uid://c0niaa1gw8d87"]

[ext_resource type="FontFile" uid="uid://de74dgvi227lf" path="res://Assets/DungeonFont.ttf" id="1_1umkb"]
[ext_resource type="Script" path="res://ui scenes/sounds_fx.gd" id="1_g3cbb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vmwn5"]
bg_color = Color(0.0784314, 0.00392157, 0.145098, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.172549, 0.027451, 0.380392, 1)
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="LabelSettings" id="LabelSettings_0iute"]
font = ExtResource("1_1umkb")
font_size = 46
font_color = Color(0.709804, 0.0705882, 0, 1)
outline_size = 4
outline_color = Color(0.223529, 0.223529, 0.223529, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8vd3k"]
content_margin_left = 25.0
content_margin_top = 15.0
content_margin_right = 25.0
content_margin_bottom = 15.0
bg_color = Color(0.286275, 0.215686, 0.184314, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 11.0
expand_margin_top = 9.0
expand_margin_right = 11.0
expand_margin_bottom = 9.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rbs4b"]
content_margin_left = 25.0
content_margin_top = 15.0
content_margin_right = 25.0
content_margin_bottom = 15.0
bg_color = Color(0.188235, 0.137255, 0.113725, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 6.0
expand_margin_top = 4.0
expand_margin_right = 6.0
expand_margin_bottom = 4.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m1ggs"]
content_margin_left = 25.0
content_margin_top = 15.0
content_margin_right = 25.0
content_margin_bottom = 15.0
bg_color = Color(0.415686, 0.32549, 0.282353, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.00184107, 0.00184107, 0.00184107, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 6.0
expand_margin_top = 4.0
expand_margin_right = 6.0
expand_margin_bottom = 4.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oboxj"]
content_margin_left = 35.0
content_margin_top = 35.0
content_margin_right = 35.0
content_margin_bottom = 35.0
bg_color = Color(0.133333, 0.00784314, 0.223529, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.509804, 0.0156863, 0.435294, 1)
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dvtdt"]
content_margin_left = 50.0
content_margin_top = 10.0
content_margin_right = 50.0
content_margin_bottom = 10.0
bg_color = Color(0.415686, 0.32549, 0.282353, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.000693897, 0.000693898, 0.000693897, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_top = 1.0

[node name="sounds_fx" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g3cbb")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="PanelContainer"]
layout_mode = 2
color = Color(0.207843, 0.00392157, 0.203922, 1)

[node name="PanelContainer2" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -234.0
offset_top = 121.0
offset_right = 234.0
offset_bottom = 197.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_vmwn5")

[node name="Label" type="Label" parent="PanelContainer2"]
layout_mode = 2
text = "Sounds / FX"
label_settings = SubResource("LabelSettings_0iute")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="backbutton" type="Button" parent="."]
layout_mode = 0
offset_left = 77.0
offset_top = 476.0
offset_right = 186.0
offset_bottom = 530.0
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("1_1umkb")
theme_override_font_sizes/font_size = 23
theme_override_styles/hover = SubResource("StyleBoxFlat_8vd3k")
theme_override_styles/pressed = SubResource("StyleBoxFlat_rbs4b")
theme_override_styles/normal = SubResource("StyleBoxFlat_m1ggs")
text = "BACK"

[node name="PanelContainer3" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 205.0
offset_top = 212.0
offset_right = 605.0
offset_bottom = 526.0
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_oboxj")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer3"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="PanelContainer2" type="PanelContainer" parent="PanelContainer3/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_dvtdt")

[node name="CheckButton" type="CheckButton" parent="PanelContainer3/VBoxContainer/PanelContainer2"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
action_mode = 0

[node name="VSeparator" type="VSeparator" parent="PanelContainer3/VBoxContainer/PanelContainer2"]
layout_mode = 2
theme_override_constants/separation = 100

[node name="Label" type="Label" parent="PanelContainer3/VBoxContainer/PanelContainer2/VSeparator"]
layout_mode = 2
offset_left = -42.0
offset_top = 9.0
offset_right = 45.0
offset_bottom = 32.0
text = "Master Mix"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainer3" type="PanelContainer" parent="PanelContainer3/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_dvtdt")

[node name="musicmute" type="CheckButton" parent="PanelContainer3/VBoxContainer/PanelContainer3"]
layout_mode = 2
action_mode = 0

[node name="VSeparator" type="VSeparator" parent="PanelContainer3/VBoxContainer/PanelContainer3"]
layout_mode = 2
theme_override_constants/separation = 100

[node name="Label" type="Label" parent="PanelContainer3/VBoxContainer/PanelContainer3/VSeparator"]
layout_mode = 2
offset_left = -12.0
offset_top = 8.0
offset_right = 34.0
offset_bottom = 31.0
text = "music"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainer4" type="PanelContainer" parent="PanelContainer3/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_dvtdt")

[node name="soundfxMute" type="CheckButton" parent="PanelContainer3/VBoxContainer/PanelContainer4"]
layout_mode = 2
action_mode = 0

[node name="VSeparator" type="VSeparator" parent="PanelContainer3/VBoxContainer/PanelContainer4"]
layout_mode = 2
theme_override_constants/separation = 100

[node name="Label" type="Label" parent="PanelContainer3/VBoxContainer/PanelContainer4/VSeparator"]
layout_mode = 2
offset_top = 11.0
offset_right = 44.0
offset_bottom = 34.0
text = "FX
"

[connection signal="button_up" from="backbutton" to="." method="_on_backbutton_button_up"]
[connection signal="toggled" from="PanelContainer3/VBoxContainer/PanelContainer2/CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="toggled" from="PanelContainer3/VBoxContainer/PanelContainer3/musicmute" to="." method="_on_musicmute_toggled"]
[connection signal="toggled" from="PanelContainer3/VBoxContainer/PanelContainer4/soundfxMute" to="." method="_on_soundfx_mute_toggled"]
